fix(design): aligned profile picture to the right

--- a/assets/style.scss
+++ b/assets/style.scss
@@ -34,7 +34,7 @@ html {
     border-radius: 50%;
     width: 100%;
     max-width: 250px;
-    margin: 0 auto;
+    margin: 0 0 0 auto;
     display: block;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
 }
